--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Most of the head content, including the title, will be set by JavaScript -->
         <title></title>
-        <script src="/static/js/index.js"></script>
+        <script id="index_script" src="/static/js/index.js" nonce={{nonce_value}}></script>
     </head>
     <body>
         <!-- The body content will be set by JavaScript -->
