Added a hard 200x200px limit to the size of each `choice.png` together with an `aspect-ratio` of 1.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -26,6 +26,9 @@ body {
     margin: 5pt;
     width: 10%;
     border: 5px solid black;
+    max-width: 200px;
+    max-height: 200px;
+    aspect-ratio: 1;
 }
 
 .choice:hover {
